--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1></h1>
+    <div class="header">
+        <div class="navbar">
+            <div class="navbar-left"><p class="logo-text">Header Logo</p></div>
+            <div class="navbar-right">
+                <ul style="list-style-type: none;">
+                    <li class="header-link">Header link one</li>
+                    <li class="header-link">Header link two</li>
+                    <li class="header-link">Header link three</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="info-section"></div>
+
+    <div class="text-section"></div>
+
+    <div class="bottom"></div>
+
+    <div class="footer"></div>
 </body>
 </html>
