Updates in the header

--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
                 </ul>
             </div>
         </div>
+        <div class="sub-header">
+            <div class="header-left">
+             <h1>This website is <br>Catastic!</h1>
+
+             <p class="first-p">Yes, another website about cats, because there are never <br>enough cats!</p>
+
+             <button class="header-button">Sign up</button>
+            </div>
+         <div class="header-right">
+            <img class="image-header" src="./svklimkin-XMxn_NkvnR0-unsplash.jpg" alt="orange cat sit">
+         </div>
+        </div>
+        
     </div>
 
     <div class="info-section"></div>
