Updates in the html and css in order to continue working in the landing page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,27 @@
         
     </div>
 
-    <div class="info-section"></div>
+    <div class="info-section">
+        <h2>Some random information.</h2>
+        <div class="blue-boxes-row">
+            <div class="blue-box">
+                <img class="image-info" src="./language-4694061_1280.jpg" alt="cat showing its tongue">
+                <p class="second-p">This is some subtext under an <br>illustration or image</p>
+            </div>
+            <div class="blue-box">
+                <img class="image-info" src="./pexels-cihat-dede-18137890.jpg" alt="white cat sit down">
+                <p class="second-p">This is some subtext under an <br>illustration or image</p>
+            </div>
+            <div class="blue-box">
+                <img class="image-info" src="./pexels-sami-aksu-14356302.jpg" alt="cat with a crown">
+                <p class="second-p">This is some subtext under an <br>illustration or image</p>
+            </div>
+            <div class="blue-box">
+                <img class="image-info" src="./ka-me-li-RsJvb6OixoA-unsplash.jpg" alt="gray cat sit down">
+                <p class="second-p">This is some subtext under an <br>illustration or image</p>
+            </div>
+        </div>
+    </div>
 
     <div class="text-section"></div>
 
